<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Drupp Driver</string>
    <string name="title_activity_ride">RideActivity</string>
    <string name="tag_line">No Bar. Just Better </string>
    <string name="get_started">Get started with your</string>
    <string name="phone_num">+234 phone number</string>
    <string name="complete_phone_number">+%1$s %2$s</string>
    <string name="arrived_at_location">You have arrived at location</string>
    <string name="resend_code">
        <u>
            Resend Code
        </u>
    </string>
    <string name="default_phone_number">+49 157 70689145</string>
    <string name="tv_please_enter_otp">Please type the verification code sent to:</string>
    <string name="verif_code">Verification Code</string>
    <string name="terms_condition">Terms and Condition</string>
    <string name="login">
        <u>
            LogIn
        </u>
    </string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="sign_up">sign up</string>
    <string name="have_account">Already have a account,</string>
    <string name="enter_details">Enter your details</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="by_signing">Agree to our <u>Terms and Conditions</u> </string>
    <string name="title_activity_ride_">Ride_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="emergency">Emergency</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="pool_ride">Pool Ride</string>
    <string name="single_ride">Single Ride</string>
    <string name="with_one_10">With one $10</string>
    <string name="with_two_5">With two $5</string>
    <string name="with_three_3_3">With three $3.3</string>
    <string name="ride_now">Ride Now</string>
    <string name="ride_later">Ride Later</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="completed_rides">Completed Rides</string>
    <string name="trips_history">Trips History</string>
    <string name="post_rides">Post Rides</string>
    <string name="payments">Payments</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="legal">Legal</string>
    <string name="settings">Settings</string>
    <string name="_notification">Notification</string>
    <string name="tnc">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="password">Password</string>
    <string name="jhon_gmail_com">jhon@gmail.com</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_7832552256">7832552256</string>
    <string name="jhon_smith">Jhon Smith</string>
    <string name="enter_pickup_location">Enter source Location</string>
    <string name="type_of_driver_you_want_to_ride_with">Type of driver you want to ride with-</string>
    <string name="chatty">Chatty</string>
    <string name="silent">Silent</string>
    <string name="indifferent">Conversational, Quiet and indifferent</string>
    <string name="conversational_quit_indifferent">Conversational Quit Indifferent</string>
    <string name="write_your_preferences_here">Write your preferences here.</string>
    <string name="indore">Indore</string>
    <string name="done">Done</string>
    <string name="number_of_co_riders_you_want">Number of co_riders you want-</string>
    <string name="setting">Settings</string>
    <plurals name="notification_number">
        <item quantity="zero">You have %1$d notification</item>
        <item quantity="one">You have %1$d new notification</item>
        <item quantity="other">You have %1$d new notifications</item>
    </plurals>
    <string name="english">English</string>
    <string name="shopping">Shopping</string>
    <string name="news_feed">News Feed</string>
    <string name="hausa">Hausa</string>
    <string name="text_adv_shopping1">Want to utilize your time?</string>
    <string name="text_adv_shopping2">Shop with us</string>
    <string name="default_news_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.

Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit.

iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit.
   </string>
    <string name="news_headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="your_ride_has_been_started">Your ride has been started</string>
    <string name="driver">(Driver)</string>
    <string name="_537">537</string>
    <string name="rides_completed">Rides Completed</string>
    <string name="_3_8">3.8*</string>
    <string name="rating">Rating</string>
    <string name="rating_by">Rating By:</string>
    <string name="message">Message:</string>
    <string name="amount_paid">Amount Paid: </string>
    <string name="user_not_rated_yet">User Not Rated Yet</string>
    <string name="write_your_comments">Write you comments.</string>
    <string name="_79">79%</string>
    <string name="positive_review">Positive Review</string>
    <string name="cab_number">Cab Number</string>
    <string name="mini">Mini</string>
    <string name="alto_k10">Alto k10</string>
    <string name="_support">Support</string>
    <string name="send_cab_details_to_your_contact">Send cab details to your contact</string>
    <string name="rate_review_now">Rate / Review Now</string>
    <string name="contact">Contact</string>
    <string name="mp_09_ab_1455">MP 09 AB 1455</string>
    <string name="cab_type">Cab Type</string>
    <string name="getting_bored">Getting Bored?</string>
    <string name="increase_your_knowledge_with_latest_news_now">Increase your knowledge with latest NEWS now.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification">Notifications</string>
    <string name="clear"><u>Clear</u></string>
    <string name="notificatio_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.In scelerisque sem at dolor. Maecenas mattis.</string>
    <string name="_1_hour_ago">at %1$s</string>
    <string name="you_have_recieved_5_new_compliments">You have received 5 new compliments</string>
    <string name="_news_feed">News Feed</string>
    <string name="add_reason_to_cancel_the_ride">Add cancel_reason to cancel the ride</string>
    <string name="unable_to_contact_the_user">Unable to contact the user</string>
    <string name="user_denied_coming">User denied coming</string>
    <string name="user_location_is_far_away">User location is far away</string>
    <string name="my_reason_is_not_listed">My cancel reason is not listed</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="cancel" tools:override="true">Cancel</string>
    <string name="start_ride">Start Ride</string>
    <string name="start">Start</string>
    <string name="cancel_successfully">Your ride has been cancelled successfully.</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="don_t_cance">Don\'t Cancel</string>
    <string name="capacity">Capacity</string>
    <string name="fare">Fare</string>
    <string name="per_minute_wait_time">Per minute wait time</string>
    <string name="_4_people">4 People</string>
    <string name="_4_55">$4.55</string>
    <string name="_0_55">$0.55</string>
    <string name="confirm_go">Confirm Go</string>
    <string name="source">Source</string>
    <string name="_destination">Destination</string>
    <string name="accept">Accept</string>
    <string name="accept_rider_pref_with_post_ride">Rider Preference Has been Accepted Successfully.</string>
    <string name="reject_rider_pref_with_post_ride">Rider Preference Has been Rejected Successfully.</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="reject_ride">Reject Ride</string>
    <string name="decline">Decline</string>
    <string name="the_driver_has_arrived_at_your_location">The driver has arrived at your location.</string>
    <string name="payment_options">Payment Options</string>
    <string name="dewas">Dewas</string>
    <string name="__source">Source:</string>
    <string name="__destination">Destination:</string>
    <string name="_5_12">$5.12</string>
    <string name="view">View</string>
    <string name="ride_for_abuja">Ride for Abuja</string>
    <string name="_06_june_2019">06 June 2019</string>
    <string name="_3_april_2019_5_20_am">3 April 2019,5:20 AM</string>
    <string name="next">Next</string>
    <string name="recieved_a_ride">Received a ride</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="please_connect_to_your_network">Please connect to your network\nand try again</string>
    <string name="change_password">Change Password</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone_number">Phone number</string>
    <string name="back">Back</string>
</resources>