<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_activity"
        android:paddingEnd="@dimen/padding_activity"
        tools:background="@color/app_theme_color">

        <EditText
            android:id="@+id/et_kin_first_name"
            style="@style/EditTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_horizontal"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <Space style="@style/SpaceMiniTrim" />

        <EditText
            android:id="@+id/et_kin_last_name"
            style="@style/EditTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <Space style="@style/SpaceMiniTrim" />

        <EditText
            android:id="@+id/et_kin_phone_number"
            style="@style/EditTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <Space style="@style/SpaceMiniTrim" />

        <EditText
            android:id="@+id/et_kin_email"
            style="@style/EditTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <Space style="@style/SpaceMiniOverride" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btCancelRide"
                style="@style/Button.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:minWidth="@dimen/min_button_width"
                android:text="@string/back" />

            <Button
                android:id="@+id/btStartRide"
                style="@style/Button.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:minWidth="@dimen/min_button_width"
                android:text="@string/next" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
