<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserSettingActivity">


    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pure_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_with_border"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Black.Small"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/english" />

            <androidx.appcompat.widget.SwitchCompat
                style="@style/MySwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:theme="@style/BrandedSwitch.control" />

            <TextView
                android:id="@+id/tvHausa"
                style="@style/TextView.Black.Small"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hausa" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/container_with_border"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvNewsFeed"
                style="@style/TextView.Black.Small"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/news_feed" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swNewsFeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:theme="@style/BrandedSwitch.control" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/container_with_border"
            android:orientation="horizontal"
            android:visibility="gone">


            <TextView
                android:id="@+id/tv_shopping"
                style="@style/TextView.Black.Small"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/shopping" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:theme="@style/BrandedSwitch.control" />
        </LinearLayout>

        <Space style="@style/SpaceMini" />


        <TextView
            android:id="@+id/btn_change_password"
            style="@style/TextView.Black.Small"
            android:layout_width="match_parent"
            android:background="@drawable/container_with_border"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/change_password" />

        <Space style="@style/SpaceMini" />

        <TextView
            android:id="@+id/tv_terms_and_condition"
            style="@style/TextView.Black.Small"
            android:layout_width="match_parent"
            android:background="@drawable/container_with_border"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/terms_condition" />

        <Space style="@style/SpaceMini" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            style="@style/TextView.Black.Small"
            android:layout_width="match_parent"
            android:background="@drawable/container_with_border"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/privacy_policy" />

        <Space style="@style/SpaceMini" />

        <TextView
            android:id="@+id/tv_rate_app"
            style="@style/TextView.Black.Small"
            android:layout_width="match_parent"
            android:background="@drawable/container_with_border"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/rate_this_app" />

        <Space style="@style/SpaceMini" />

        <TextView
            android:id="@+id/tv_contact_us"
            style="@style/TextView.Black.Small"
            android:layout_width="match_parent"
            android:background="@drawable/container_with_border"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/contact_us" />


    </LinearLayout>

</RelativeLayout>