<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        style="@style/TextView.Black.Medium"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/please_connect_to_your_network" />

    <Space style="@style/SpaceMiniTrim" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btNo"
            style="@style/Black_Button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/grey"
            android:text="@string/no" />

        <Space
            style="@style/SpaceMiniTrim"
            android:layout_width="10dp" />

        <Button
            android:id="@+id/btYes"
            style="@style/Black_Button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorBlack"
            android:text="@string/yes" />

    </LinearLayout>


</LinearLayout>